Fix dark mode issues

--- a/src/components/screens/lockedBalance/lockedBalance/lockedBalance.css
+++ b/src/components/screens/lockedBalance/lockedBalance/lockedBalance.css
@@ -19,6 +19,7 @@
 
   & > p {
     margin-top: 0px;
+    color: var(--color-maastricht-blue);
   }
 }
 
@@ -27,7 +28,7 @@
   flex-direction: column;
   padding: 5px 0;
   margin-bottom: 20px;
-  border-bottom: 1px solid rgba(0, 0, 0, 0.15);
+  border-bottom: 1px solid var(--color-platinum);
   list-style: none;
 
   & > li {
@@ -44,6 +45,7 @@
       margin-top: 0px;
       margin-bottom: 20px;
       display: flex;
+      color: var(--color-maastricht-blue);
 
       & > img {
         margin-right: 11px;
